--- a/css/themes/grey-white.css
+++ b/css/themes/grey-white.css
@@ -2,13 +2,13 @@
 
 main {
 	background: #485564;
-	color: #FAFAFA;
+	color: #0D1117;
 }
 
 .icons-social a {
-	color: #FAFAFA;
+	color: #0D1117;
 }
 
 .icons-social a svg path{
-	fill: #FAFAFA;
+	fill: #0D1117;
 }
